force-app/main/default/objects/FundingAward/FundingAward.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>