force-app/main/default/objects/FundingAward/fields/Avaialble_Funds__c.field-meta.xml
<CustomField>
    <fullName>Avaialble_Funds__c</fullName>
    <formula>Amount  -  TotalDisbursed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>