force-app/main/default/objects/FundingAward/fields/ContractHelper__c.field-meta.xml
<CustomField>
    <fullName>ContractHelper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>this is a helper field so that conga can filter by the contract, since the standard contractID field is on the newest API.  can delete when API catches up, but must update the where filter on the Contract funging query.</inlineHelpText>
    <label>ContractHelper</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>HELPERFunding Awards Do not use</relationshipLabel>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>