force-app/main/default/objects/FundingAward/fields/ContractStatus__c.field-meta.xml
<CustomField>
    <fullName>ContractStatus__c</fullName>
    <formula>TEXT(Contract.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>