force-app/main/default/objects/FundingAward/fields/TotalDisbursed__c.field-meta.xml
<CustomField>
    <fullName>TotalDisbursed__c</fullName>
    <label>Total Disbursed</label>
    <summarizedField>FundingDisbursement.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>FundingDisbursement.Status</field>
        <operation>equals</operation>
        <value>Approved, Processing, Paid, Scheduled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FundingDisbursement.FA_RollUp_DRLS__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingDisbursement.FundingAwardId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>