force-app/main/default/objects/FundingAward/listViews/Executive_Director_FundingAward.listView-meta.xml
<ListView>
    <fullName>Executive_Director_FundingAward</fullName>
    <filterScope>Queue</filterScope>
    <label>CDA Executive Director</label>
    <queue>Executive_Director</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>