force-app/main/default/objects/FundingAward/listViews/Finance_Level_2_FundingAward.listView-meta.xml
<ListView>
    <fullName>Finance_Level_2_FundingAward</fullName>
    <filterScope>Queue</filterScope>
    <label>CDA Finance Level 2</label>
    <queue>Finance_Level_2</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>