force-app/main/default/objects/FundingAward/listViews/Monitor_Queue_FundingAward.listView-meta.xml
<ListView>
    <fullName>Monitor_Queue_FundingAward</fullName>
    <filterScope>Queue</filterScope>
    <label>CDA Monitor Queue</label>
    <queue>Monitor_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>