force-app/main/default/objects/FundingAward/listViews/Program_Admin_Queue_FundingAward.listView-meta.xml
<ListView>
    <fullName>Program_Admin_Queue_FundingAward</fullName>
    <filterScope>Queue</filterScope>
    <label>CDA Program Admin Queue</label>
    <queue>Program_Admin_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>